--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/NikBel3476/Graphics#readme",
   "devDependencies": {
+    "@types/node": "^18.11.13",
+    "typescript": "^4.9.4",
     "vite": "^4.0.0"
   }
 }
